resoluçao de bug no overflow-x.

--- a/style.css
+++ b/style.css
@@ -46,8 +46,6 @@ body {
 .principal {
     background-color: var(--fundo-main);
     padding: 20px 0 30px 0;
-}
-.principal {
     color: var(--branco-pradao);
 }
     .principal__topo {
@@ -61,20 +59,7 @@ body {
             height: 300px;
             width: 720px;
         }
-.principal__populares {
-    overflow-x: scroll;
-}
-.principal__populares::-webkit-scrollbar {
-    width: 12px;
-}
-.principal__populares::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.193); 
-}
-.principal__populares::-webkit-scrollbar-thumb {
-    background-color: var(--fundo-footer);
-    border-radius: 20px;       
 
-}
     .principal__populares--titulo {
         padding-left: 20px;
         font-size: 30px;
@@ -87,6 +72,18 @@ body {
         list-style: none;
         margin: 10px;
         cursor: pointer;
+        overflow-x: scroll;
+    }
+    .principal__populares--opcoes::-webkit-scrollbar {
+        width: 12px;
+    }
+    .principal__populares--opcoes::-webkit-scrollbar-track {
+        background: rgba(0, 0, 0, 0.193); 
+    }
+    .principal__populares--opcoes::-webkit-scrollbar-thumb {
+        background-color: var(--fundo-footer);
+        border-radius: 20px;       
+    
     }
         .principal__populares--opcao{
             display: flex;
@@ -102,20 +99,6 @@ body {
         .populares__opcao--imagens:hover {
             border: 5px solid var(--cor-borda-botao);
         }
-.principal__filmes {
-    overflow-x: scroll;
-}
-.principal__filmes::-webkit-scrollbar {
-    width: 12px;
-}
-.principal__filmes::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.193); 
-}
-.principal__filmes::-webkit-scrollbar-thumb {
-    background-color: var(--fundo-footer);
-    border-radius: 20px;       
-
-}
     .principal__filmes--titulo {
         padding-left: 20px;
         font-size: 30px;
@@ -128,6 +111,18 @@ body {
         list-style: none;
         margin: 10px;
         cursor: pointer;
+        overflow-x: scroll;
+    }
+    .principal__filmes--opcoes::-webkit-scrollbar {
+        width: 12px;
+    }
+    .principal__filmes--opcoes::-webkit-scrollbar-track {
+        background: rgba(0, 0, 0, 0.193); 
+    }
+    .principal__filmes--opcoes::-webkit-scrollbar-thumb {
+        background-color: var(--fundo-footer);
+        border-radius: 20px;       
+    
     }
         .principal__filmes--opcao{
             display: flex;
@@ -142,20 +137,8 @@ body {
         .filmes__opcao--imagens:hover {
             border: 5px solid var(--cor-borda-botao);
         }
-.principal__series {
-    overflow-x: scroll;
-}
-.principal__series::-webkit-scrollbar {
-    width: 12px;
-}
-.principal__series::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.193); 
-}
-.principal__series::-webkit-scrollbar-thumb {
-    background-color: var(--fundo-footer);
-    border-radius: 20px;       
+   
 
-}
     .principal__series--titulo {
         padding-left: 20px;
         font-size: 30px;
@@ -166,13 +149,26 @@ body {
             margin: 0;
             padding: 0;
             list-style: none;
+            margin: 10px;
             cursor: pointer;
+            overflow-x: scroll;
         }
+        .principal__series--opcoes::-webkit-scrollbar {
+            width: 12px;
+        }
+        .principal__series--opcoes::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, 0.193); 
+        }
+        .principal__series--opcoes::-webkit-scrollbar-thumb {
+            background-color: var(--fundo-footer);
+            border-radius: 20px;       
+        
+        }
+
             .principal__series--opcao{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                margin: 10px;
             }
             .series__opcao--imagens{
                 border: 5px solid transparent;  
